Fix Dark Mode

--- a/docs/main.css
+++ b/docs/main.css
@@ -1670,7 +1670,69 @@ fieldset {
   color: #bbbbbb;
 }
 
-.theme-fandomdesktop-dark .highlight * {
+.theme-fandomdesktop-dark .highlight .cm,
+.theme-fandomdesktop-dark .highlight .cp,
+.theme-fandomdesktop-dark .highlight .c1,
+.theme-fandomdesktop-dark .highlight .cs,
+.theme-fandomdesktop-dark .highlight .c,
+.theme-fandomdesktop-dark .highlight .cd,
+.theme-fandomdesktop-dark .highlight .err,
+.theme-fandomdesktop-dark .highlight .gd,
+.theme-fandomdesktop-dark .highlight .ge,
+.theme-fandomdesktop-dark .highlight .gr,
+.theme-fandomdesktop-dark .highlight .gh,
+.theme-fandomdesktop-dark .highlight .gi,
+.theme-fandomdesktop-dark .highlight .go,
+.theme-fandomdesktop-dark .highlight .gp,
+.theme-fandomdesktop-dark .highlight .gu,
+.theme-fandomdesktop-dark .highlight .gt,
+.theme-fandomdesktop-dark .highlight .kc,
+.theme-fandomdesktop-dark .highlight .kd,
+.theme-fandomdesktop-dark .highlight .kn,
+.theme-fandomdesktop-dark .highlight .kp,
+.theme-fandomdesktop-dark .highlight .kr,
+.theme-fandomdesktop-dark .highlight .kt,
+.theme-fandomdesktop-dark .highlight .k,
+.theme-fandomdesktop-dark .highlight .kv,
+.theme-fandomdesktop-dark .highlight .mf,
+.theme-fandomdesktop-dark .highlight .mh,
+.theme-fandomdesktop-dark .highlight .il,
+.theme-fandomdesktop-dark .highlight .mi,
+.theme-fandomdesktop-dark .highlight .mo,
+.theme-fandomdesktop-dark .highlight .m,
+.theme-fandomdesktop-dark .highlight .mb,
+.theme-fandomdesktop-dark .highlight .mx,
+.theme-fandomdesktop-dark .highlight .sb,
+.theme-fandomdesktop-dark .highlight .sc,
+.theme-fandomdesktop-dark .highlight .sd,
+.theme-fandomdesktop-dark .highlight .s2,
+.theme-fandomdesktop-dark .highlight .se,
+.theme-fandomdesktop-dark .highlight .sh,
+.theme-fandomdesktop-dark .highlight .si,
+.theme-fandomdesktop-dark .highlight .sx,
+.theme-fandomdesktop-dark .highlight .sr,
+.theme-fandomdesktop-dark .highlight .s1,
+.theme-fandomdesktop-dark .highlight .ss,
+.theme-fandomdesktop-dark .highlight .s,
+.theme-fandomdesktop-dark .highlight .na,
+.theme-fandomdesktop-dark .highlight .bp,
+.theme-fandomdesktop-dark .highlight .nb,
+.theme-fandomdesktop-dark .highlight .nc,
+.theme-fandomdesktop-dark .highlight .no,
+.theme-fandomdesktop-dark .highlight .nd,
+.theme-fandomdesktop-dark .highlight .ni,
+.theme-fandomdesktop-dark .highlight .ne,
+.theme-fandomdesktop-dark .highlight .nf,
+.theme-fandomdesktop-dark .highlight .nl,
+.theme-fandomdesktop-dark .highlight .nn,
+.theme-fandomdesktop-dark .highlight .nt,
+.theme-fandomdesktop-dark .highlight .vc,
+.theme-fandomdesktop-dark .highlight .vg,
+.theme-fandomdesktop-dark .highlight .vi,
+.theme-fandomdesktop-dark .highlight .nv,
+.theme-fandomdesktop-dark .highlight .ow,
+.theme-fandomdesktop-dark .highlight .o,
+.theme-fandomdesktop-dark .highlight .w {
 	filter:invert(1) hue-rotate(180deg);
 }
 
@@ -1823,7 +1885,7 @@ a:active {
 }
 
 .visualmode-contrast .highlight * {
-	filter:none;
+	filter:none!Important;
 	color:var(--canvas-text-secondary-background-color);
 }
 
